gateway-controller-implementation/nginx-gateway-fabric/dataplane-example/nginx-hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello-v1
  template:
    metadata:
      labels:
        app: nginx-hello-v1
    spec:
      containers:
      - name: nginx-hello
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-v1
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nginx-hello-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello-v2
  template:
    metadata:
      labels:
        app: nginx-hello-v2
    spec:
      containers:
      - name: nginx-hello
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-v2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nginx-hello-v2
