gateway-controller-implementation/nginx-gateway-fabric/dataplane-example/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-http-route
spec:
  parentRefs:
  - name: nginx-gw
  hostnames:
  - "nginx-hello.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-hello
      port: 80
